# RobcoMigrator

./: .gitignore  CLAUDE.md  CMakeLists.txt  PEX_METADATA_SCRUBBING.md  README.md  RobCoMigrator_AV.kdev4  build_all.sh  build_mod.sh  build_on_virtual_machine.sh  build_psc.sh  pack_mod.sh  resume.sh  strip_pex_metadata.py
.github/workflows/: build.yml
Documentation/: NexusModsDescription.md
res/: PluginInfo.cpp.in
src/: EditorIDLoader.hpp  LLMigrator.cpp  LLMigrator.hpp  MCM.psc  OldCrap.hpp  RobCoMigrator.psc  RobCoMigrator_ExcludedMods.ini  config.json  main.cpp
